--- a/NailArt/html/feedback.html
+++ b/NailArt/html/feedback.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="../bootstrap-5.3.3-dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
         <link rel="stylesheet" href="../css/feedback.css">
-        <link rel="icon" type="image/png" href="../Images/images/download.jpeg">
+        <link rel="icon" type="image/png" href="../images/images/download.jpeg">
         <title>NAIL ART | Art is Fashion</title>
       </head>
 <body>
@@ -35,7 +35,7 @@
 
   <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand d-flex " style="width: 61.5%;" href="#"><img src="../Images/images/pixelcut-export.png" width="70px" class="img-fluid"
+      <a class="navbar-brand d-flex " style="width: 61.5%;" href="#"><img src="../images/images/pixelcut-export.png" width="70px" class="img-fluid"
           alt="NAIL ART" style="padding: 0; margin-top:-20px ; margin-bottom: -20px;">
         <h2 style=" margin:5px 0 auto auto; letter-spacing: 20px; font-weight: 700;" class="text text-muted" id="nh">NAIL ART</h3>
       </a>
@@ -149,7 +149,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-4">
-                <a class="d-flex" href="#" style="text-decoration: none !important;"><img src="../Images/images/pixelcut-export.png" width="70px"
+                <a class="d-flex" href="#" style="text-decoration: none !important;"><img src="../images/images/pixelcut-export.png" width="70px"
                   class="img-fluid" alt="NAIL ART" style="padding: 0; margin-top:0px ; margin-bottom: 20px;">
                 <h2 style="margin-top: 25px; margin-left: 5px;" class="text text-dark" >NAIL ART</h3>
               </a>
@@ -199,7 +199,7 @@
             <div class="row">
               <div class="col-md-4">
                 <a class="d-flex" href="#" style="text-decoration: none !important;"><img
-                    src="../Images/images/pixelcut-export.png" width="70px" class="img-fluid" alt="NAIL ART"
+                    src="../images/images/pixelcut-export.png" width="70px" class="img-fluid" alt="NAIL ART"
                     style="padding: 0; margin-top:0px ; margin-bottom: 20px;">
                   <h2 style="margin-top: 25px; margin-left: 5px;" class="text text-dark">NAIL ART</h3>
                 </a>
